# TextureAnimation

./: .gitignore  CMakeLists.txt  README.md  test.cpp
src/: AudioDevice.cpp  AudioDevice.h  AuditoryModel.cpp  AuditoryModel.h  CochlearFilter.cpp  CochlearFilter.h  Downsampler.cpp  Downsampler.h  Filter.cpp  Filter.h  FilterBank.cpp  FilterBank.h  LowpassFilter.cpp  LowpassFilter.h  Resampler.h  Signal.cpp  Signal.h  StatsGenerator.cpp  StatsGenerator.h  TextureFilterer.cpp  TextureFilterer.h  TextureSynthesizer.cpp  TextureSynthesizer.h  test.cpp
src/Filtering/: CochlearFilter.cpp  CochlearFilter.h  Downsampler.cpp  Downsampler.h  Filter.cpp  Filter.h  FilterBank.cpp  FilterBank.h  LowpassFilter.cpp  LowpassFilter.h  Signal.cpp  Signal.h
src/Synthesis/: AudioDevice.cpp  AudioDevice.h  StatsGenerator.cpp  StatsGenerator.h  TextureFilterer.cpp  TextureFilterer.h  TextureSynthesizer.cpp  TextureSynthesizer.h
